fix modal overlap with header

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,11 +88,11 @@ h1 {
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.4);
-    z-index: 1;
+    z-index: 6;
 }
 .overlay-wrapper{
     position: relative;
-    z-index: 2;
+    z-index: 7;
     background: #fff;
     border-radius: 10px;
     padding: 40px 40px 20px;
